<resources>
    <string name="app_name">HW4_TriviaApp</string>
    <string name="welcome_to_trivia_app">Welcome to Trivia App</string>
    <string name="trivia_ready">Trivia Ready</string>
    <string name="exit">Exit</string>
    <string name="network_error">Network Error</string>
    <string name="start_trivia">Start Trivia</string>
    <string name="loading_trivia">Loading Trivia</string>
    <string name="time_left_placeholder">Time Left: X seconds</string>
    <string name="question_text_placeholder">Question text goes here..</string>
    <string name="Quit">Quit</string>
    <string name="Next">Next</string>
    <string name="Trivia_Stats">Trivia Stats</string>
    <string name="Correct_answers">Correct Answers</string>
    <string name="try_again_paragraph">Try again and see if you can get all the correct answers!</string>
    <string name="try_again">Try Again</string>
    <string name="_100">100%</string>

</resources>
